# lakocie-dataset

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
data/: database.db
queries/unique_names/: analytical_components.sql  dietary_components.sql
src/lakocie_dataset/: __init__.py  config.py  main.py  operations.py
src/lakocie_dataset/alembic/: env.py
src/lakocie_dataset/database/: crud.py  db.py  models.py  schemas.py  sessions.py
src/lakocie_dataset/openai_api/: communication.py  output_models.py
src/lakocie_dataset/scrap/: downloader.py  fetch.py  io.py  kf.py  paths.py  permissions.py  scrapper.py  stores.py  string_utils.py
src/lakocie_dataset/scrap/stores/: kf.py  string_utils.py
test/: test-config.yaml  test_config.py  test_permissions.py
test/test_database/: test_crud.py  test_models.py  test_sessions.py
test/test_scrap/: test_fetch.py  test_io.py  test_kf.py  test_paths.py  test_permissions.py  test_scrapper.py  test_stores.py  test_string_utils.py
