[project]
name = "lakocie-dataset"
version = "0.1.0"
description = "A specialized web scraping and data processing tool "
readme = "README.md"
authors = [{ name = "MtGr", email = "Mt-Gr@outlook.com" }]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "openai>=1.66.3",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "sqlmodel>=0.0.24",
]

[project.scripts]
lakocie-dataset = "lakocie_dataset:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.5"]
